# seven-steps-to-poem

./: .env.example  API_SPECIFICATION.yaml  DATA_MODELS.md  DEPLOYMENT_GUIDE.md  README.md  README_V2_ARCHITECTURE.md  SYSTEM_COMPONENTS.md  TECHNICAL_ARCHITECTURE.md  alembic.ini  docker-compose.dev.yml  docker-compose.services.yml  pyproject.toml  七步成诗商业解决方案_ai_agent_产品设计文档.md
.claude/: settings.local.json
migrations/: env.py
nginx/: default.conf  nginx.conf
scripts/: dev-setup.sh  init-db.sql  start-services.sh  test-services.sh
services/issue_tree/: Dockerfile  main.py
services/orchestrator/: Dockerfile  main.py
services/problem_framer/: Dockerfile  main.py  requirements.txt
seven_steps/: __init__.py  cli.py
seven_steps/agents/: __init__.py  __init___v2.py  base.py  base_v2.py  data_analysis.py  issue_tree.py  issue_tree_v2.py  orchestrator.py  orchestrator_v2.py  planner.py  presentation.py  prioritization.py  problem_framer.py  problem_framer_v2.py  synthesizer.py
seven_steps/api/: __init__.py  dependencies.py  main.py
seven_steps/api/routes/: __init__.py  executions.py  health.py  problems.py
seven_steps/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  models.py  orchestrator.py  schemas.py
